k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atum
  labels:
    app.kubernetes.io/name: atum
